--- a/src/assets/css/global/page.css
+++ b/src/assets/css/global/page.css
@@ -13,9 +13,10 @@
 }
 
 .mobile_view{
-    padding: 10px;
     width: 400px;
     height: 96vh;
-    border-radius: 10px;
+    border-radius: 30px;
     background-color: rgb(12, 12, 19);
+    box-shadow: 0 0 20px rgb(158, 158, 158);
+    overflow: hidden;
 }
