--- a/src/assets/css/onboard/onboard.css
+++ b/src/assets/css/onboard/onboard.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Concert+One&family=Exo+2:ital,wght@0,100..900;1,100..900&family=League+Gothic&family=Merienda:wght@300..900&display=swap');
+
+.onboard_wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    position: relative;
+}
+
 .swiper {
     width: 100%;
     height: 65vh;
@@ -6,7 +16,7 @@
 .swiper-slide {
     text-align: center;
     font-size: 18px;
-    background: #fff;
+    background: #000000;
 
     display: flex;
     justify-content: center;
@@ -18,10 +28,68 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    opacity: .5;
 }
 
 
-
+.onboard_header{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 1rem;
+}
 .onboard_header h1{
-    
+    color: #fff;
+    font-family: "League Gothic", serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+}
+.onboard_header p{
+    color: #fff;
+    padding: 10px 30px;
+    text-align: center;
+    font-size: 1.2rem;
+}
+.crousal_next{
+    width: 100%;
+    padding: 0rem 2rem 3rem 2rem;
+}
+.crousal_next button{
+    width: 100%;
+    padding: 8px;
+    border-radius: 10px;
+    font-size: 1.2rem;
+    color: #000;
+    background-color: #a7ff37;
+    cursor: pointer;
+}
+.crousal_next button:hover{
+    background-color: #96ff00;
+    color: #000;
+    transition: background-color 0.3s ease-in-out;
+    scale: 1.02;
+    transition: scale 0.3s;
+}
+
+
+.skip_button{
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+    z-index: 100;
+}
+.skip_button .skip_button_link{
+    color: #fff;
+    text-decoration: none;
+    opacity: .6;
+}
+.skip_button .skip_button_link:hover{
+    opacity: 1;
+}
+
+.swiper-button-next:after, .swiper-rtl .swiper-button-prev:after,
+.swiper-button-prev:after, .swiper-rtl .swiper-button-next:after{
+    scale: .7 !important;
+    color: #fff;
 }
