--- a/src/assets/css/onboard/onboard.css
+++ b/src/assets/css/onboard/onboard.css
@@ -56,6 +56,7 @@
     width: 100%;
     padding: 0rem 2rem 3rem 2rem;
 }
+.onboarding_actions button,
 .crousal_next button{
     width: 100%;
     padding: 8px;
@@ -64,7 +65,9 @@
     color: #000;
     background-color: #a7ff37;
     cursor: pointer;
+    border: none;
 }
+.onboarding_actions button:hover,
 .crousal_next button:hover{
     background-color: #96ff00;
     color: #000;
@@ -84,6 +87,7 @@
     color: #fff;
     text-decoration: none;
     opacity: .6;
+    cursor: pointer;
 }
 .skip_button .skip_button_link:hover{
     opacity: 1;
@@ -93,4 +97,46 @@
 .swiper-button-prev:after, .swiper-rtl .swiper-button-next:after{
     scale: .7 !important;
     color: #fff;
+}
+
+
+.onboarding_actions{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    z-index: 1;
+}
+
+.onboarding_last_content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    gap: 2rem;
+    padding: 0rem 2rem 3rem 2rem;
+    color: #fff;
+    position: relative;
+}
+.onboarding_last_content h1{
+    font-size: 2.3rem;
+    font-weight: 500;
+}
+.onboarding_last_content p{
+    font-size: 1.3rem;
+}
+.onboard_vector1{
+    position: absolute;
+    top: -3rem;
+    right: -1rem;
+    width: 10rem;
+    opacity: .5;
+}
+.onboard_vector2{
+    position: absolute;
+    bottom: 3rem;
+    left: -2rem;
+    width: 8rem;
+    opacity: .5;
 }
